--- a/Engine/Source/Programs/PixelStreaming/WebServers/SignallingWebServer/public/PixelDemo.htm
+++ b/Engine/Source/Programs/PixelStreaming/WebServers/SignallingWebServer/public/PixelDemo.htm
@@ -23,53 +23,10 @@
 
 <body onload="load(); onParagonLoad()">
     <div class="wrapper">
-        <nav id="sidebar">
-            <div id="sidebarContent">
-            <div class="sidebar-header">
-                <!--<h3>Configuration</h3>-->
-                <img src="images/SFLogo.png" width="200px" />
-            </div>
-
-             <ul id="sidebarlist" class="list-unstyled components">
-                <p></p>
-				 <!--
-               <li>
-                    <a href="#charSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Characters</a>
-                    <ul class="collapse list-unstyled" id="charSubmenu">
-                        <li>
-                            <a href="#" onclick="onConfigButton(0,0)"><img src="images/Aurora.png" width="150px" />
-                            <h2><span>Aurora</span></h2></a>
-                        </li>
-                        <li>
-                            <a href="#" onclick="onConfigButton(0,1)"><img src="images/Crunch.png" width="150px" />
-                            <h2><span>Crunch</span></h2></a>
-                        </li>
-                        <li>
-                            <a href="#" onclick="onConfigButton(0,2)"><img src="images/Drongo.png" width="150px" />
-                            <h2><span>Drongo</span></h2></a>
-                        </li>
-                        <li>
-                            <a href="#" onclick="onConfigButton(0,3)"><img src="images/Greystone.png" width="150px" />
-                            <h2><span>Greystone</span></h2></a>
-                        </li>
-                        <li>
-                            <a href="#" onclick="onConfigButton(0,4)"><img src="images/Kallari.png" width="150px" />
-                            <h2><span>Kallari</span></h2></a>
-                        </li>
-                    </ul>
-                </li>
--->
-
-            </ul>
-</div>
-        </nav>
-
         <div id="content" class="container">
-            <div class="jumbotron">
-                <p class="display-4">
-                  SpaceForm
-              </p>
-            </div>
+            <header class="h2">
+				<img  src="images/SFLogo.png" width="200" style="padding: 30px 0px;" />
+			</header>
             <nav>
                 <div class="btn-group btn-group-lg" role="group">
                     <div class="btn-group mr-2 btn-group-lg" role="group" aria-label="Configuration group">
@@ -77,9 +34,10 @@
                             <span class="fas fa-bars"></span>
                         </button>
 -->
-						<button type="button" id="sidebarCollapse" class="btn btn-secondary" onclick="onToken('?token=mQqdp8ckYio2Pj1qLpJiwe7EATQVbYYv')">
+<!--						<button type="button" id="sidebarCollapse" class="btn btn-secondary" onclick="onToken('?token=mQqdp8ckYio2Pj1qLpJiwe7EATQVbYYv')">
                             <span class="fas fa-bars"></span>
                         </button>
+-->
                     </div>
 
                     <div class="btn-group mr-2 btn-group-lg" role="group" aria-label="Visualization group">
@@ -313,16 +271,17 @@
                         <div id="configuration">
                             <!--<div id="button" type="button" onclick="onConfigurationOne()">Option One</div>
                             <div id="button" type="button" onclick="onConfigurationTwo()">Option Two</div>-->
-                            <div id="ck-fullscreen">
-                                <img src="images/MaximiseToFullscreen.png" alt="Maximise to Fullscreen" id="fullscreen-img" class="fullscreen-btn">
-                            </div>
+                          <div id="ck-fullscreen">
+                            <img src="images/MaximiseToFullscreen.png" alt="Maximise to Fullscreen" id="fullscreen-img" class="fullscreen-btn">
+                          </div>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="text"></div>
+            <footer>powered by <a href="https:\\spaceform.io" target="_blank"><u>spaceform.io</u></a></footer>
 
-            <div id="overlay" class="text-light bg-dark">
+            <div id="overlay" class="text-light bg-dark" style="visibility: hidden">>
                 <div id="overlayButton" onclick="onExpandOverlay_Click()">+</div>
                 <div id="overlaySettings">
                     <div id="KickOthers">
@@ -388,8 +347,9 @@
                     </div>
                 </div>
             </div>
+
         </div>
-    </div>
+</div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
